--- a/Handle/app/src/main/AndroidManifest.xml
+++ b/Handle/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a12481.handle">
+    package="com.example.mhs.handle">
 
     <application
         android:allowBackup="true"
